add activity functinality

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,9 +14,9 @@
   }
 
   /* Activity */
-  /* .activity-card {
+  .activity-card {
     @apply flex items-center gap-2 rounded-md bg-dark-2 px-7 py-4;
-  } */
+  }
 
   /* No Result */
   .no-result {
